objects/tFlow__Route__c.object
<CustomObject>
    <fields>
        <fullName>tFlow__App_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>App Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tFlow__App_Next__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>App Next</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tFlow__App__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tFlow__Base_Fieldset_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Base Fieldset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tFlow__Base_Object_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Base Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tFlow__Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tFlow__Group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tFlow__Hook_Class__c</fullName>
        <description>The class to instantiate</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Hook Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tFlow__Is_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tFlow__Is_Sortable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Sortable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tFlow__Is_System_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is System Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tFlow__Parent_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Id</label>
        <referenceTo>tFlow__Route__c</referenceTo>
        <relationshipLabel>Routes</relationshipLabel>
        <relationshipName>Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Route</label>
    <listViews>
        <fullName>tFlow__All</fullName>
        <columns>tFlow__Is_Sortable__c</columns>
        <columns>NAME</columns>
        <columns>tFlow__App_Id__c</columns>
        <columns>tFlow__App__c</columns>
        <columns>tFlow__App_Next__c</columns>
        <columns>tFlow__Display_Order__c</columns>
        <columns>tFlow__Is_Hidden__c</columns>
        <columns>tFlow__Is_System_Required__c</columns>
        <columns>tFlow__Parent_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>tFlow__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>